# CS100-Ray-Tracing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
config/: config.json  config1.json  config2.json  config3.json
include/: camera.h  common.h  film.h  integrator.h  math-utils.h  ray.h  vec3.h  vector3.h
include/geometry/: base-geometry.h  geometry.h  interaction.h  scene.h  sphere.h
include/material/: base-material.h  dielectric.h  lambertian.h  material.h  metal.h
include/utils/: arg-parser.h  random-number-generator.h  scope-timer.h  timer.h
script/: ppm-to-png.py  run-debug.ps1  run-debug.sh  run-release.ps1  run-release.sh
src/: camera.c  camera.cpp  film.c  film.cpp  integrator.c  integrator.cpp  main.c  main.cpp  math-utils.c  math-utils.cpp  ray.c  ray.cpp  vec3.c  vector3.c  vector3.cpp
src/geometry/: base-geometry.cpp  scene.c  scene.cpp  sphere.c  sphere.cpp
src/material/: base-material.cpp  dielectric.cpp  lambertian.cpp  metal.cpp
src/utils/: arg-parser.cpp  random-number-generator.cpp  timer.cpp
